Running CargoTracker on WLS on AKS with PostgreSQL
- Update jta-data-source data source definition to use jdbc
- Declare detail settings of SequenceGenerator for all model classes
- Add a hidden text on index.html with the project build version string for pipeline
- Update initial-data.sql to provide enough info for table initialization
- Create a pipeline to setup WLS on AKS, leveraging existing work
- Create a pipeline to update CargoTracker, build/deploy the latest image to a AKS cluster and validate the completion of the deployment

--- a/src/main/resources/org/eclipse/cargotracker/messages.properties
+++ b/src/main/resources/org/eclipse/cargotracker/messages.properties
@@ -9,3 +9,4 @@ deliveryHistory.eventDescription.UNLOAD=Unloaded off voyage {0} in {1}, at {2}.
 deliveryHistory.eventDescription.RECEIVE=Received in {0}, at {1}.
 deliveryHistory.eventDescription.CLAIM=Claimed in {0}, at {1}.
 deliveryHistory.eventDescription.CUSTOMS=Cleared customs in {0}, at {1}.
+versionString=${project.version} ${project.build.time}
